--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 0;  
+  padding: 0;
 }
 
 body {
@@ -10,14 +10,15 @@ body {
 #mainBoard {
     display: grid;
     place-items: center;
-    height: 100%;
+    height: 100vh;
+    width: 100%;
 }
 
 #gameboard {
     background-size: contain;
     background-color: rgba(255, 255, 255, 0.00);
-    height: 500px;
-    width: 500px;
+    height: 400px;
+    width: 400px;
    
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -41,11 +42,31 @@ body {
 button {
   background-color: red;
   height: 55px;
-  width: 55px;
+  width: 162px;
 }
 
 #score {
   border: solid 1px red;
   height: 100px;
   width: 200px;
+}
+
+#newGame {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+}
+
+#newGame #newGameButton {
+  margin-left: 135.667px;
+  background-color: rgba(255, 255, 255, 0.877);
+  color: rgb(5, 7, 133);
+  height: 55px;
+  width: 128.667px;
+  border-radius: 7px;
+}
+
+#newGame #playerChange {
+  margin-left: auto;
 }
