--- a/style.css
+++ b/style.css
@@ -45,11 +45,7 @@ button {
   width: 162px;
 }
 
-#score {
-  border: solid 1px red;
-  height: 100px;
-  width: 200px;
-}
+
 
 #newGame {
   display: flex;
@@ -69,4 +65,32 @@ button {
 
 #newGame #playerChange {
   margin-left: auto;
+}
+
+#score {
+  margin-top: -15px;
+  border-radius: 2px;
+  height: 100px;
+  width: 400px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  background-color: rgba(255, 255, 255, 0.788);;
+  
+}
+
+#score span {
+  height: 100px;
+  text-align: center;
+  color: rgb(66, 67, 129);
+  font-weight: bold;
+  font-size: 24px;
+}
+
+#score span div {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 35px;
+  color: rgb(64, 65, 148);
 }
